--- a/assets/style.css
+++ b/assets/style.css
@@ -1,20 +1,29 @@
-html {
-    position: relative;
-    min-height: 100%;
-  }
-  body {
-    /* Margin bottom by footer height */
-    margin-bottom: 60;
-  }
+body {
+  background-image: url(../images/Background.jpg);
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  color: #777777;
+  background-size: 100%;
+}
 
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    /* Set the fixed height of the footer here */
-    height: 60px;
-    line-height: 60px; /* Vertically center the text there */
-    background-color: #f5f5f5;
-  }
+.link-options {
+  float: left;
+}
+.headshot{
+  float:left;
+  height: 150px;
+  width:auto;
+  margin-left: 20px;
+}
+.topnav {
+  background-color: aqua;
+  color: white;
   
-  
+}
+
+.card{
+  text-align: center;
+}
+#picDiv{
+  margin-left: 40%;
+  margin-right: 40%;
+}
